--- a/santander-dio-api/build.gradle
+++ b/santander-dio-api/build.gradle
@@ -26,6 +26,12 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+tasks.jar {
+	manifest {
+		attributes["Main-Class"] = "santander-dio-api/src/main/java/edu/albiery/Application.java"
+	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
